--- a/shero/src/main/webapp/css/main.css
+++ b/shero/src/main/webapp/css/main.css
@@ -1,3 +1,148 @@
-body {
-  padding-top: 70px;
+/* BASIC STYLINGS
+============================================================================= */
+body { 
+    padding-top:5em;
+}
+
+/* ANIMATION STYLINGS
+============================================================================= */
+#signup-form { 
+    position:relative;
+    min-height:300px; 
+    overflow:hidden; 
+    padding:30px; 
+}
+
+/* basic styling for entering and leaving */
+/* left and right added to ensure full width */
+#form-views.ng-enter,
+#form-views.ng-leave { 
+    position:absolute; 
+    left:30px; 
+    right:30px;
+    transition:0.5s all ease; 
+    -moz-transition:0.5s all ease; 
+    -webkit-transition:0.5s all ease; 
+}
+    
+/* enter animation */
+#form-views.ng-enter            { 
+    -webkit-animation:slideInRight 0.5s both ease;
+    -moz-animation:slideInRight 0.5s both ease;
+    animation:slideInRight 0.5s both ease; 
+}
+
+/* leave animation */
+#form-views.ng-leave            { 
+    -webkit-animation:slideOutLeft 0.5s both ease;
+    -moz-animation:slideOutLeft 0.5s both ease;
+    animation:slideOutLeft 0.5s both ease;   
+}
+
+/* ANIMATIONS
+============================================================================= */
+/* slide out to the left */
+@keyframes slideOutLeft {
+    to      { transform: translateX(-200%); }
+}
+@-moz-keyframes slideOutLeft {  
+    to      { -moz-transform: translateX(-200%); }
+}
+@-webkit-keyframes slideOutLeft {
+    to      { -webkit-transform: translateX(-200%); }
+}
+
+/* slide in from the right */
+@keyframes slideInRight {
+    from    { transform:translateX(200%); }
+    to      { transform: translateX(0); }
+}
+@-moz-keyframes slideInRight {
+    from    { -moz-transform:translateX(200%); }
+    to      { -moz-transform: translateX(0); }
+}
+@-webkit-keyframes slideInRight {
+    from    { -webkit-transform:translateX(200%); }
+    to      { -webkit-transform: translateX(0); }
+}
+
+.stepwizard-step p {
+    margin-top: 0.2em;    
+}
+
+.process-row {
+    display: table-row;
+}
+
+.process {
+    display: table;     
+    width: 100%;
+    position: relative;
+}
+
+.process-step button[disabled] {
+    opacity: 1 !important;
+    filter: alpha(opacity=100) !important;
+}
+
+.process-row:before {
+    top: 2.5em;
+    bottom: 0;
+    position: absolute;
+    content: " ";
+    width: 100%;
+    height: 1px;
+    background-color: #ccc;
+    z-order: 0;
+    
+}
+
+.process-step {    
+    display: table-cell;
+    text-align: center;
+    position: relative;
+}
+
+.process-step p {
+    margin-top:10px;
+    
+}
+
+.btn.btn-circle {
+    width: 6em;
+    height: 6em;
+    text-align: center;
+    padding: 6px 0;
+    font-size: 12px;
+    line-height: 1.428571429;
+    border-radius: 50%;
+}
+
+.btn.btn-circle:hover {
+
+}
+
+.btn.btn-circle.active {
+    background-color: #D8FF00;
+}
+
+.process-link { 
+    color:#777;  
+    text-align:center; 
+    text-transform:uppercase; 
+    display: block;
+}
+
+.process-link:hover {
+    color:#000;  
+    text-decoration:none; 
+}
+
+.process-link:active {
+    color:#000;  
+    text-decoration:none; 
+}
+
+.form-control {
+    border-radius: 4px;
 }
