--- a/shero/src/main/webapp/app/views/Navbar.html
+++ b/shero/src/main/webapp/app/views/Navbar.html
@@ -1,3 +1,5 @@
+  <!--NAVBAR -->
+
 <div class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
