--- a/shero/src/main/webapp/app/views/AddItem/partials/Availability.html
+++ b/shero/src/main/webapp/app/views/AddItem/partials/Availability.html
@@ -7,13 +7,16 @@
 
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" ng-if='type=="individual"'>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <button type="button" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 btn btn-default" ng-click="isCollapsed = !isCollapsed">
-          <span ng-show="!isCollapsed">Show selected dates</span>
+        <button type="button" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 btn btn-info" ng-click="isCollapsed = !isCollapsed">
+          <span ng-show="!isCollapsed">Show selected dates <span class="badge">{{ formData.selectedDates.length }}</span></span>
           <span ng-hide="!isCollapsed">Hide selected dates</span>
         </button>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" uib-collapse="!isCollapsed">
         <div class="well well-sm">
+          <div ng-if="formData.selectedDates.length == 0">
+            No dates selected!
+          </div>
           <div class="row" ng-repeat='d in formData.selectedDates | orderBy' style="padding-top: 0.5em;">
             <span class="col-lg-10 col-md-10 col-sm-10 col-xs-10">{{d | date : 'dd. MMMM yyyy'}}</span>
             <button class='col-lg-1 col-md-1 col-sm-1 col-xs-1 btn btn-xs btn-warning' ng-click='removeDateFromSelected(d)'><i class="fa fa-times"></i></button>
