--- a/shero/src/main/webapp/app/views/AddItem/partials/Pictures.html
+++ b/shero/src/main/webapp/app/views/AddItem/partials/Pictures.html
@@ -1,6 +1,6 @@
 <!-- form-payment.html -->
 <div class="text-center">
-    
-    
-    <button type="submit" class="btn btn-danger">Share Item</button>
+	<input type="file"></input>
+
+	<button type="submit" class="btn btn-success">Share Item</button>
 </div>
