Bugfix for AddItem-Process in Firefox

--- a/shero/src/main/webapp/app/views/AddItem/AddItem.html
+++ b/shero/src/main/webapp/app/views/AddItem/AddItem.html
@@ -29,8 +29,8 @@
   </div>
 </div>
 
-  <form class="form-horizontal" id="signup-form" ng-submit="processForm()">
-    <div id="form-views" ui-view></div>
+  <form class="form-horizontal" id="" ng-submit="processForm()">
+    <div id="" ui-view></div>
   </form>
 
 <pre>
