--- a/shero/src/main/webapp/css/main.css
+++ b/shero/src/main/webapp/css/main.css
@@ -8,7 +8,7 @@ body {
 ============================================================================= */
 #signup-form { 
     position:relative;
-    min-height:300px; 
+    min-height:500px; 
     overflow:hidden; 
     padding:30px; 
 }
@@ -17,7 +17,7 @@ body {
 /* left and right added to ensure full width */
 #form-views.ng-enter,
 #form-views.ng-leave { 
-    position:absolute; 
+    position:relative; 
     left:30px; 
     right:30px;
     transition:0.5s all ease; 
