--- a/shero/src/main/webapp/app/views/AddItem/partials/GeneralInformation.html
+++ b/shero/src/main/webapp/app/views/AddItem/partials/GeneralInformation.html
@@ -43,7 +43,7 @@
 
 <div class="form-group row">
 	<div class="col-lg-offset-4 col-lg-4 col-md-offset-4 col-md-4 col-sm-offset-4 col-sm-4 col-xs-offset-3 col-xs-5">
-    <a ui-sref="addItem.availability" class="btn btn-block btn-info">
+    <a ui-sref="addItem.availability" class="btn btn-block btn-info" ng-disabled="(formData.name == undefined) || (formData.price == undefined) || (formData.location == undefined)">
     Next <i class="fa fa-arrow-right"></i>
     </a>
   </div>
