Some layout changes to additem page

--- a/shero/src/main/webapp/app/views/AddItem/AddItem.html
+++ b/shero/src/main/webapp/app/views/AddItem/AddItem.html
@@ -2,7 +2,7 @@
   <div class="process">
       <div class="process-row">
           <div class="process-step">
-              <button type="button" class="btn btn-default btn-circle" go-to="/AddItem/GeneralInformation" ng-class="{active : isGeneral}">
+              <button type="button" class="btn btn-info btn-circle" go-to="/AddItem/GeneralInformation" ng-class="{active : isGeneral}">
                 <i class="fa fa-flag fa-2x"></i>
               </button>
               <p>
@@ -10,7 +10,7 @@
               </p>
           </div>
           <div class="process-step">
-              <button type="button" class="btn btn-default btn-circle" go-to="/AddItem/Availability" ng-class="{active : isAvailability}"  ng-disabled="(formData.name == undefined) || (formData.price == undefined) || (formData.location == undefined)">
+              <button type="button" class="btn btn-info btn-circle" go-to="/AddItem/Availability" ng-class="{active : isAvailability}"  ng-disabled="(formData.name == undefined) || (formData.price == undefined) || (formData.location == undefined)">
                 <i class="fa fa-calendar-check-o fa-2x"></i>
               </button>
               <p>
@@ -18,7 +18,7 @@
               </p>
           </div>
           <div class="process-step">
-              <button type="button" class="btn btn-default btn-circle" go-to="/AddItem/Pictures" ng-class="{active : isPictue}"  ng-disabled="(formData.name == undefined) || (formData.price == undefined) || (formData.location == undefined)">
+              <button type="button" class="btn btn-info btn-circle" go-to="/AddItem/Pictures" ng-class="{active : isPictue}"  ng-disabled="(formData.name == undefined) || (formData.price == undefined) || (formData.location == undefined)">
                 <i class="fa fa-camera fa-2x"></i>
               </button>
               <p>
