--- a/shero/src/main/webapp/app/views/EditUser.html
+++ b/shero/src/main/webapp/app/views/EditUser.html
@@ -1,1 +1,47 @@
-<p>Edit User!</p>
+<form class="form-horizontal" ng-submit="processForm()" data-toggle="validator">
+	<div class="form-group">
+		<label for="firstname" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">First name</label>
+		<div class="col-sm-10">
+			<input type="Text" class="form-control" id="firstname" placeholder="Enter your first name" style="border-radius: 4px;" ng-model="formData.firstname">
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label for="lastname" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">Last name</label>
+		<div class="col-sm-10">
+			<input type="Text" class="form-control" id="lastname" placeholder="Enter your last name" style="border-radius: 4px;" ng-model="formData.lastname">
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label for="email" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">Email</label>
+		<div class="col-sm-10">
+			<input type="email" class="form-control" id="email" placeholder="Enter your email" style="border-radius: 4px;" ng-model="formData.email">
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label for="password" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">Password</label>
+		<div class="col-sm-10">
+			<input type="password" class="form-control" id="password" placeholder="Enter your new password" style="border-radius: 4px;" ng-model="formData.password">
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label for="password" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">Repeat password</label>
+		<div class="col-sm-10">
+			<input type="password" class="form-control" id="password" placeholder="Repeat the password" style="border-radius: 4px;" ng-model="formData.reppassword" data-match="#password" data-match-error="Whoops, these don't match">
+		</div>
+	</div>
+
+	<div class="form-group">
+		<div class="col-sm-offset-2 col-sm-10">
+			<button type="submit" class="btn btn-success">Update</button>
+		</div>
+	</div>
+</form>
+
+<pre>
+  {{ formData }}
+</pre>
+
