--- a/shero/src/main/webapp/app/views/AddItem/partials/GeneralInformation.html
+++ b/shero/src/main/webapp/app/views/AddItem/partials/GeneralInformation.html
@@ -40,6 +40,7 @@
     </tags-input>
   </div>
 </div>
+<p>Model: {{$parent.formData.tags}}</p>
 
 <div class="form-group row">
 	<div class="col-lg-offset-4 col-lg-4 col-md-offset-4 col-md-4 col-sm-offset-4 col-sm-4 col-xs-offset-3 col-xs-5">
