--- a/shero/src/main/webapp/app/views/AddItem/partials/Pictures.html
+++ b/shero/src/main/webapp/app/views/AddItem/partials/Pictures.html
@@ -1,6 +1,3 @@
-<!-- form-payment.html -->
 <div class="text-center">
-	<input type="file"></input>
-
-	<button type="submit" class="btn btn-success">Share Item</button>
+	<button type="submit" class="btn btn-success"><i class="fa fa-check"></i> Share Item</button>
 </div>
