--- a/shero/src/main/webapp/app/views/Navbar.html
+++ b/shero/src/main/webapp/app/views/Navbar.html
@@ -18,7 +18,7 @@
       <ul class="nav navbar-nav"></ul>
       <search-bar></search-bar>
       <user-menu></user-menu>
-      <login-button></login-button>
+      <!--<login-button></login-button> -->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </div>
