--- a/shero/src/main/webapp/app/views/EditUser.html
+++ b/shero/src/main/webapp/app/views/EditUser.html
@@ -17,31 +17,50 @@
 		<label for="email" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">Email</label>
 		<div class="col-sm-10">
 			<input type="email" class="form-control" id="email" placeholder="Enter your email" style="border-radius: 4px;" ng-model="formData.email">
-		</div>
-	</div>
 
-	<div class="form-group">
-		<label for="password" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">Password</label>
-		<div class="col-sm-10">
-			<input type="password" class="form-control" id="password" placeholder="Enter your new password" style="border-radius: 4px;" ng-model="formData.password">
 		</div>
 	</div>
+</div>
 
-	<div class="form-group">
-		<label for="password" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">Repeat password</label>
-		<div class="col-sm-10">
-			<input type="password" class="form-control" id="password" placeholder="Repeat the password" style="border-radius: 4px;" ng-model="formData.reppassword" data-match="#password" data-match-error="Whoops, these don't match">
+
+<div class="form-group">
+	<label for="password" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">Password</label>
+	<div class="col-sm-10">
+		<input type="password" class="form-control" id="password" placeholder="Enter your new password" style="border-radius: 4px;" ng-model="formData.password">
+	</div>
+</div>
+
+<div class="form-group">
+	<label for="password" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">Confirm password</label>
+	<div class="col-sm-10">
+		<input type="password" class="form-control" id="comfirmpassword" placeholder="Repeat the password" style="border-radius: 4px;" ng-model="formData.reppassword" onChange="checkPasswordMatch();">
+		<div class="registrationFormAlert has-success" id="divCheckPasswordMatch">
 		</div>
 	</div>
+</div>
 
 	<div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10">
+			<br>
 			<button type="submit" class="btn btn-success">Update</button>
 		</div>
 	</div>
 </form>
 
+<script>
+
+function checkPasswordMatch() {
+    var password = $("#password").val();
+    var confirmPassword = $("#confirmpassword").val();
+
+    if (password != confirmPassword)
+        $("#divCheckPasswordMatch").html("The passwords are not the same!");
+    else
+        $("#divCheckPasswordMatch").html("Passwords match.");
+}
+</script>
+
 <pre>
-  {{ formData }}
+	{{ formData }}
 </pre>
 
