--- a/shero/src/main/webapp/app/views/AddItem/partials/Pictures.html
+++ b/shero/src/main/webapp/app/views/AddItem/partials/Pictures.html
@@ -1,3 +1,41 @@
-<div class="text-center">
-	<button type="submit" class="btn btn-success"><i class="fa fa-check"></i> Share Item</button>
+<style type="text/css">
+	.drop {
+		padding: 15px;
+		border: 2px #f1f1f1 dashed;
+		border-radius: 5px;
+		line-height: 34px;
+}
+.drop.drag-over {
+    background: #5CB85C;
+    color: #fff
+}
+</style>
+
+<div class="text-center" >
+
+    <div flow-init flow-file-success="$file.msg = $message">
+
+    <div class="drop" flow-drop="" ng-class="dropClass">
+        <span class="btn btn-default" flow-btn="">Upload File
+            <input type="file" multiple="multiple" style="visibility: hidden; position: absolute;">
+        </span>
+        <b>OR</b>
+        Drag And Drop your file here
+    </div>
+
+    <!--
+    <table>
+        <tr ng-repeat="file in $flow.files">
+            <td>{{$index+1}}</td>
+            <td>{{file.name}}</td>
+            <td>{{file.msg}}</td>
+        </tr>
+    </table>
+    -->
+    <img flow-img="$flow.files[0]"/>
+    </div>
+    
+
+    <button type="submit" class="btn btn-success">Share Item</button>
+
 </div>
