Register form completed (password hashed, data sent to serve). Bug in AddItem-Tags field fixed. Services for server-communication

--- a/shero/src/main/webapp/app/views/Navbar/ModalLogin/partials/LoginTab.html
+++ b/shero/src/main/webapp/app/views/Navbar/ModalLogin/partials/LoginTab.html
@@ -1,8 +1,8 @@
 <form class="form-horizontal" action="" method="">
-    <label for="login_username">Username</label>   
-    <input type="text" class="form-control" id="login_username" 
-       placeholder="Username" 
-       ng-model="formData.username"
+    <label for="login_username">E-Mail</label>   
+    <input type="mail" class="form-control" id="login_mail" 
+       placeholder="Mail" 
+       ng-model="formData.mail"
        required 
        autofocus>
     <br>
