--- a/shero/src/main/webapp/app/views/AddItem/partials/GeneralInformation.html
+++ b/shero/src/main/webapp/app/views/AddItem/partials/GeneralInformation.html
@@ -16,10 +16,10 @@
 <div class="form-group">
 	<label class="col-lg-2 col-md-2 col-sm-2 col-xs-12" for="location">Location *</label>
 	<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 input-group">
-		<select class="form-control" id="location" ng-model="formData.location" style="border-radius: 4px;" required>
-      <option>Barcelona</option>
-      <option>Munich</option>
-      <option>Paris</option>
+		<select class="form-control" id="location" ng-model="formData.addressId" style="border-radius: 4px;" required>   
+            <option ng-repeat="address in $storage.user.addresses" value="{{address.id}}">
+                {{address.street}} {{address.number}} ({{address.zipcode}} {{address.city}})
+            </option>
     </select>
 	</div>
 </div>
@@ -43,7 +43,7 @@
 
 <div class="form-group row">
 	<div class="col-lg-offset-4 col-lg-4 col-md-offset-4 col-md-4 col-sm-offset-4 col-sm-4 col-xs-offset-3 col-xs-5">
-    <a ui-sref="addItem.availability" class="btn btn-block btn-info" ng-disabled="(formData.name == undefined) || (formData.price == undefined) || (formData.location == undefined)">
+    <a ui-sref="addItem.availability" class="btn btn-block btn-info" ng-disabled="(formData.name == undefined) || (formData.price == undefined) || (formData.addressId == undefined)">
     Next <i class="fa fa-arrow-right"></i>
     </a>
   </div>
