updated user menu labeling. added scroll bar to selected dates in addItem-view

--- a/shero/src/main/webapp/app/views/AddItem/partials/Availability.html
+++ b/shero/src/main/webapp/app/views/AddItem/partials/Availability.html
@@ -13,7 +13,7 @@
         </button>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" uib-collapse="!isCollapsed">
-        <div class="well well-sm">
+        <div class="well well-sm" style="max-height: 300px; overflow-x: hidden; overflow-y: scroll;">
           <div ng-if="formData.selectedDates.length == 0">
             No dates selected!
           </div>
