--- a/shero/src/main/webapp/app/views/AddItem/partials/Pictures.html
+++ b/shero/src/main/webapp/app/views/AddItem/partials/Pictures.html
@@ -26,7 +26,7 @@
 	</div>		
 
 	
-<!-- 	<!-- Felix default upload form -->
+<!--  Felix default upload form -->
 <!-- 	<form action="UploadServlet" method="post" -->
 <!-- 		enctype="multipart/form-data"> -->
 <!-- 		<input type="file" name="file" size="50" /> <br /> <input -->
@@ -35,7 +35,7 @@
 </div>
 
 
-<!-- 	<!-- Drag and drop file, dont work -->
+<!--  Drag and drop file, dont work -->
 <!--  <div class="drop" flow-drop="" ng-class="dropClass"> -->
 <!-- 	<span class="btn btn-default" flow-btn="">Upload File  -->
 <!-- 		<input type="file" file-model="myFile" style="visibility: hidden; position: absolute;"> -->
