--- a/shero/src/main/webapp/app/views/EditUser/partials/Password.html
+++ b/shero/src/main/webapp/app/views/EditUser/partials/Password.html
@@ -2,14 +2,14 @@
 	<div class="form-group">
 		<label class="col-lg-2 col-md-2 col-sm-2 col-xs-12" for="password">Password</label>
 		<div class="col-lg-8 col-md-8 col-sm-10 col-xs-12 input-group">
-			<input type="password" class="form-control" id="password" name="password" ng-model="generalForm.password" placeholder="Enter your new password" style="border-radius: 4px;">
+			<input type="password" class="form-control" id="password" name="password" ng-model="passwordForm.password" placeholder="Enter your new password" style="border-radius: 4px;">
 		</div>
 	</div>
 
 	<div class="form-group">
 		<label class="col-lg-2 col-md-2 col-sm-2 col-xs-12" for="repppassword">Confirm password</label>
 		<div class="col-lg-8 col-md-8 col-sm-10 col-xs-12 input-group">
-			<input type="password" class="form-control" name="reppassword" ng-model="generalForm.reppassword" placeholder="Confirm your new password" style="border-radius: 4px;">
+			<input type="password" class="form-control" name="reppassword" ng-model="passwordForm.reppassword" placeholder="Confirm your new password" style="border-radius: 4px;">
 		</div>
 	</div>
 
