--- a/shero/src/main/webapp/app/views/EditUser/partials/Address.html
+++ b/shero/src/main/webapp/app/views/EditUser/partials/Address.html
@@ -53,7 +53,8 @@
 	<br/>
 	<div class="form-group">
 		<div class="col-sm-10">
-			<button type="submit" class="btn btn-success">Add address</button>
+			<button type="submit" class="btn btn-success">Update address</button>
 		</div>
 	</div>
 </form>
+<button ng-click="processNewAddress()" class="btn btn-success">Add address</button>
