--- a/shero/src/main/webapp/css/main.css
+++ b/shero/src/main/webapp/css/main.css
@@ -139,3 +139,16 @@ body {
 .form-control {
     border-radius: 4px;
 }
+
+.item-list {
+    display: block;
+    padding: 0px;
+    margin-bottom: 0px;
+    line-height: 1.42857143;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    -webkit-transition: border .2s ease-in-out;
+    -o-transition: border .2s ease-in-out;
+    transition: border .2s ease-in-out;
+}
