--- a/shero/src/main/webapp/app/views/SearchResults.html
+++ b/shero/src/main/webapp/app/views/SearchResults.html
@@ -9,33 +9,52 @@
 		<div class="col-md-5">
 			<div ng-repeat="item in itemlist">
 				<div class="well well-lg">
-				<div class="row">
-					<div class="col-md-5">
-						<img class="img-thumbnail"  src="img/yeoman.png" alt="100%x180" style="height:180px; width: 180px; object-fit: cover;"></image>
-					</div>
-					<div class="col-md-7">
-						<div class="row">
-							<div class=".col-md-12">
-								<h1>{{item.name}} <small><i class="fa fa-star-o fa-2x pull-right">{{item.rating}}</i></small></h1>
+					<div class="row">
+						<div class="col-md-5">
+							<img class="img-thumbnail"  src="img/yeoman.png" alt="100%x180" style="height:180px; width: 180px; object-fit: cover;"></image>
+						</div>
+						<div class="col-md-7">
+							<div class="row">
+								<div class=".col-md-12">
+									<h1>{{item.name}} <small><i class="fa fa-star-o fa-2x pull-right">{{item.rating}}</i></small></h1>
+								</div>
 							</div>
-						</div>
-						<div class="row">
-							<h2>{{item.price}} €<button class="btn btn-default pull-right" type="rent">Rent</button></h2>
-						</div>
-						<div class="row">
-							<a href="#"><i class="fa fa-angle-down fa-2x"></i></a>
-						</row>
+							<div class="row">
+								<h2>{{item.price}} €<button class="btn btn-default pull-right" type="rent">Rent</button></h2>
+							</div>
+							<div class="row">
+								<a href="#"><i class="fa fa-angle-down fa-2x"></i></a>
+							</row>
 
+						</div>
 					</div>
 				</div>
 			</div>
-
-			//her for å legge til kode for description
-			</div>
 		</div>
+		<div ng-controller="PaginationDemoCtrl">
+			<uib-pagination boundary-links="true" total-items="totalItems" ng-model="currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></uib-pagination>
+		</div>
+	</div>
+		
 		<div class="col-md-7">Map</div>
 	</div>
 </div>
 
+angular.module('ui.bootstrap.demo').controller('PaginationDemoCtrl', function ($scope, $log) {
+  $scope.totalItems = 64;
+  $scope.currentPage = 4;
+
+  $scope.setPage = function (pageNo) {
+    $scope.currentPage = pageNo;
+  };
+
+  $scope.pageChanged = function() {
+    $log.log('Page changed to: ' + $scope.currentPage);
+  };
+
+  $scope.maxSize = 5;
+  $scope.bigTotalItems = 175;
+  $scope.bigCurrentPage = 1;
+});
 
 
