--- a/shero/src/main/webapp/app/views/AddItem/partials/Pictures.html
+++ b/shero/src/main/webapp/app/views/AddItem/partials/Pictures.html
@@ -1,4 +1,5 @@
 <style type="text/css">
+
 .drop {
 	padding: 15px;
 	border: 2px #f1f1f1 dashed;
@@ -12,33 +13,43 @@
 }
 </style>
 
+
+
 <div class="text-center">
 
 	<div flow-init flow-file-success="$file.msg = $message">
-		
 		<div ng-controller = "AddItemCtrl">
 		
-		    <input type="file" file-model="myFile"/>
-
+		    <!-- <input type="file" file-model="myFile"/> -->
+		    <div class="drop" flow-drop="" ng-class="dropClass">
+		    
+				<span class="btn btn-default" flow-btn="">Upload File 
+					<input type="file" file-model="myFile" style="visibility: hidden; position: absolute;">
+				</span> 
+				<b>OR</b> Drag And Drop your file here
+			</div>
+		    
 		    <button ng-click="uploadFile()" type="submit" class="btn btn-success">Share Item</button>
 		</div>
 		<img flow-img="$flow.files[0]" />
 	</div>		
-
-	
-<!--  Felix default upload form -->
-<!-- 	<form action="UploadServlet" method="post" -->
-<!-- 		enctype="multipart/form-data"> -->
-<!-- 		<input type="file" name="file" size="50" /> <br /> <input -->
-<!-- 			type="submit" value="Upload File" /> -->
-<!-- 	</form> -->
 </div>
 
 
-<!--  Drag and drop file, dont work -->
-<!--  <div class="drop" flow-drop="" ng-class="dropClass"> -->
-<!-- 	<span class="btn btn-default" flow-btn="">Upload File  -->
-<!-- 		<input type="file" file-model="myFile" style="visibility: hidden; position: absolute;"> -->
-<!-- 	</span>  -->
-<!-- 	<b>OR</b> Drag And Drop your file here -->
-<!-- </div> -->
+
+
+
+<!-- 
+<div class="text-center">
+
+	<div flow-init flow-file-success="$file.msg = $message">
+		<div ng-controller = "AddItemCtrl">
+		
+		    <input type="file" file-model="myFile"/>
+		    <button ng-click="uploadFile()" type="submit" class="btn btn-success">Share Item</button>
+		</div>
+		<img flow-img="$flow.files[0]" />
+	</div>		
+</div>
+-->
+
