--- a/shero/src/main/webapp/app/views/AddItem/partials/Pictures.html
+++ b/shero/src/main/webapp/app/views/AddItem/partials/Pictures.html
@@ -11,45 +11,56 @@
 	background: #5CB85C;
 	color: #fff
 }
+
+.thumbnail {
+	max-width: 200px; max-height: 150px; line-height: 20px; margin-bottom: 5px;
+}
+
 </style>
 
-
-
-<div class="text-center">
-
-	<div flow-init flow-file-success="$file.msg = $message">
-		<div ng-controller = "AddItemCtrl">
-		
-		    <!-- <input type="file" file-model="myFile"/> -->
-		    <div class="drop" flow-drop="" ng-class="dropClass">
-		    
-				<span class="btn btn-default" flow-btn="">Upload File 
-					<input type="file" file-model="myFile" style="visibility: hidden; position: absolute;">
-				</span> 
-				<b>OR</b> Drag And Drop your file here
-			</div>
-		    
-		    <button ng-click="uploadFile()" type="submit" class="btn btn-success">Share Item</button>
-		</div>
-		<img flow-img="$flow.files[0]" />
-	</div>		
+<div class="text-center" >
+<div ng-app="app" 
+	 flow-init
+     flow-file-added="!!{png:1,gif:1,jpg:1,jpeg:1}[$file.getExtension()]"
+     flow-files-submitted="$flow.upload()">
+      
+	<div class="container">
+	  <div>
+	    <div class="thumbnail" ng-hide="$flow.files.length">
+	      <!-- <img src="http://www.placehold.it/200x150/EFEFEF/AAAAAA&text=no+image" /> -->
+          <img src="../../../../img/placeholder_small.jpeg" />
+	    </div>
+	    <h2>Upload an Image</h2>
+	    <div class="thumbnail" ng-show="$flow.files.length">
+	      <img flow-img="$flow.files[0]" />
+	    </div>
+	    
+	    <div>
+	      <button class="btn btn-success" ng-hide="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">Select image</button>
+	      <button class="btn" 			  ng-show="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">Change</button>
+	      <button class="btn btn-danger"  ng-show="$flow.files.length" ng-click="$flow.cancel()">Remove</button>
+	    </div>
+	    <p>
+	      Only PNG,GIF,JPG files.
+	    </p>
+	  </div>
+  
+  
+  	  <!-- Progressbar -->
+	  <div>
+	    <!-- ngRepeat: file in $flow.files -->
+	    <div ng-repeat="file in $flow.files" class="transfer-box ng-scope ng-binding">
+	      <div class="progress progress-striped" ng-class="{active: file.isUploading()}">
+	        <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" ng-style="{width: (file.progress() * 100) + '%'}" style="width: 100%;">
+	          <span class="sr-only ng-binding">1% Complete</span>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	  
+	</div>
+	<button ng-click="uploadFile()" type="submit" class="btn btn-success">Share Item</button>
 </div>
 
-
-
-
-
-<!-- 
-<div class="text-center">
-
-	<div flow-init flow-file-success="$file.msg = $message">
-		<div ng-controller = "AddItemCtrl">
-		
-		    <input type="file" file-model="myFile"/>
-		    <button ng-click="uploadFile()" type="submit" class="btn btn-success">Share Item</button>
-		</div>
-		<img flow-img="$flow.files[0]" />
-	</div>		
 </div>
--->
 
