--- a/shero/src/main/webapp/app/views/EditUser/partials/Address.html
+++ b/shero/src/main/webapp/app/views/EditUser/partials/Address.html
@@ -53,8 +53,15 @@
 	<br/>
 	<div class="form-group">
 		<div class="col-sm-10">
-			<button type="submit" class="btn btn-success">Update address</button>
+			<button type="submit" ng-click="processAddressForm()" class="btn btn-success">Update address</button>  <!-- added ng-click="processAddressForm()" -->
 		</div>
 	</div>
+	<!-- added "delete-button" -->
+	<div class="form-group">
+		<div class="col-sm-10">
+			<button ng-click="deleteAddress()" class="btn btn-success">Delete address</button>  
+		</div>
+	</div>
+	
 </form>
 <button ng-click="processNewAddress()" class="btn btn-success">Add address</button>
