Revert a4b420e6f20eae02cd2360d1e18bb72209595e46

--- a/shero/src/main/webapp/app/views/Navbar/Navbar.html
+++ b/shero/src/main/webapp/app/views/Navbar/Navbar.html
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav"></ul>
       <search-bar></search-bar>
-      <user-menu ui-if="$storage.SHeroId"></user-menu>
+      <user-menu ui-if="$storage.user"></user-menu>
       <!--<login-button></login-button> -->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
