--- a/shero/src/main/webapp/app/views/AddItem/partials/Pictures.html
+++ b/shero/src/main/webapp/app/views/AddItem/partials/Pictures.html
@@ -17,8 +17,9 @@
 
 	<div ng-app="app" 
 		 flow-init
-	     flow-file-added="!!{png:1,gif:1,jpg:1,jpeg:1}[$file.getExtension()]"
-	     flow-files-submitted="test( $files, $event, $flow )">
+	     flow-file-added="validate($file)"
+	     flow-file-added="!!{png:1,jpg:1,jpeg:1}[$file.getExtension()]"
+	     flow-files-submitted="imageUpload( $files, $event, $flow )">
 	      
 		<div class="container">
 		  <div>
@@ -32,6 +33,15 @@
 		      <img flow-img="$flow.files[0]" />
 		    </div>
 		    
+	    	<p>
+			    <!-- <span class="label label-info">Size: {{$flow.getSize()}}</span>  -->
+			    <span class="label label-info">Size: {{$flow.getSize() / 1024 | number:0}} KB</span>
+			    <span class="label label-info">Is Uploading: {{$flow.isUploading()}}</span>
+		  	</p>
+		  	<div ng-repeat="error in errors">
+				{{error.error}} - {{error.file.name}}
+			</div>
+		  	
 		    <!-- Buttons for selection -->
 		    <div>
 		      <button type="button" class="btn btn-default" ng-hide="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">Select image</button>
@@ -39,7 +49,7 @@
 		      <button type="button" class="btn btn-danger"  ng-show="$flow.files.length" ng-click="$flow.cancel()">Remove</button>
 		    </div>
 		    <p>
-		      Only PNG,GIF,JPG files.
+		      Only PNG,GIF,JPG files smaller than 2MB.
 		    </p>
 		  </div>
 	  
