--- a/shero/src/main/webapp/app/views/AddItem/partials/Pictures.html
+++ b/shero/src/main/webapp/app/views/AddItem/partials/Pictures.html
@@ -1,7 +1,7 @@
 <style type="text/css">
 
 .thumbnail {
-    line-height: 20px;
+  	line-height: 20px;
     margin-bottom: 5px;
     overflow: hidden;
     word-break: normal;
@@ -19,7 +19,8 @@
 		 flow-init
 	     flow-file-added="validate($file)"
 	     flow-file-added="!!{png:1,jpg:1,jpeg:1}[$file.getExtension()]"
-	     flow-files-submitted="imageUpload( $files, $event, $flow )">
+	     flow-files-submitted="imageUpload( $files, $event, $flow )"
+	     flow-complete="redirect()">
 	      
 		<div class="container">
 		  <div>
